UX: break long words to prevent overflow in activity stream (#28250)

--- a/app/assets/stylesheets/common/components/user-stream-item.scss
+++ b/app/assets/stylesheets/common/components/user-stream-item.scss
@@ -35,6 +35,10 @@
     flex-grow: 1;
   }
 
+  .stream-topic-title {
+    overflow-wrap: anywhere;
+  }
+
   .user-stream-item__metadata {
     align-items: end;
     display: flex;
